<resources>
    <string name="app_name">Alerta-PE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sobre">Sobre</string>
    <string name="title_activity_maps">Alerta-PE</string>
    <string name="Previsão">Previsão</string>
    <string name="Notificações">Notificações</string>
    <string name="Conscientização">Conscientização</string>
    <string name="Informações">Informações</string>
    <string name="Configurações">Configurações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
