<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_previsão"
            android:icon="@drawable/baseline_cloud_black_24"
            android:title="@string/Previsão" />
        <item
            android:id="@+id/nav_notificações"
            android:icon="@drawable/baseline_sms_black_24"
            android:title="@string/Notificações" />
        <item
            android:id="@+id/nav_conscientizacao"
            android:icon="@drawable/baseline_sentiment_satisfied_alt_black_24"
            android:title="@string/Conscientização" />
        <item
            android:id="@+id/nav_informacoes"
            android:icon="@drawable/baseline_info_black_24"
            android:title="@string/Informações" />
        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/baseline_settings_black_24"
            android:title="@string/Configurações" />
    </group>

<!--
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/baseline_place_24"
                android:title="@string/Configurações" />
        </menu>
    </item>-->



</menu>
